--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-
-.sidebar .sidebar-header {
-    padding: 20px;
-    background: #193566;
+body{
+    background: #E5E5E5;
 }
-.component{
-    padding: 20px 0;
+ul li label{
+    display: none;
 }
 .rowoverlay{
     position: absolute;
@@ -14,33 +12,140 @@
     bottom:0;
     right:0;
     height:100%;
+    width: 100%;
 } 
 .coloverlay{
     background: #193566;
     border-radius: 20px;
     height: 100%;
-    margin-left: 2%;
-  }
+    margin-left: 3%;
+    width: 6%;
+}
 .listIcon{
-    position: fixed;
-    left: 3.8%;
-    right: 15%;
-    top: 3.51%;
-    bottom: 92.74%;
+    position: absolute;
+    top: 30px;
+    left: 34px;
 }
 .dashboardIcon{
-    position: fixed;
-    left: 3.5%;
-    right: 9.92%;
-    top: 30.61%;
-    bottom: 65.76%;
+    position: absolute;
+    top: 170px;
+    left: 9px;
+    background: white;
+    border-radius: 3px;
+    padding: 5px 5px;
 }
-.choosen{
-    position: fixed;
-    left: 3.2%;
-    right: 94.5%;
-    top: 29.73%;
-    bottom: 65.15%;
-    background: #FFFFFF;
-    border-radius: 8px;
+.calendarIcon{
+    position: absolute;
+    top: 230px;
+    left: 15px;
 }
+.clientIcon{
+    position: absolute;
+    top: 260px;
+    left: 15px;
+}
+.staffIcon{
+    position: absolute;
+    top: 290px;
+    left: 15px;
+}
+.serviceIcon{
+    position: absolute;
+    top: 320px;
+    left: 15px;
+}
+.title{
+    color: #193566;
+    padding-left: 8px;
+    font-family: Poppins;
+    font-style: normal;
+    font-size: 50px;
+    line-height: 75px;
+}
+.button1{
+    border: none;
+    background: #193566;
+    color: #ECF0F3;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 33px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    box-shadow: -7px -7px 15px #FFFFFF, 7px 7px 14px rgba(151, 167, 195, 0.3);
+    border-radius: 100px;
+    padding: 5px 30px;
+    margin-top: 13px;
+    margin-right: 0px;
+    float: right;
+}
+.button2{
+    border: none;
+    
+
+}
+.button3{
+    border: none;
+
+}
+
+
+  
+@media only screen and (max-width: 600px) {
+    .rowoverlay{
+        height: 100%;
+    }
+    .coloverlay{
+        width: 17%;
+        border-radius: 10px;
+       
+    }
+    .listIcon{
+        position: absolute;
+        top: 28.87px;
+        left: 25px;
+    } 
+    .dashboardIcon{
+        position: absolute;
+        top: 200px;
+        left: 1px;
+        background: white;
+        padding: 4px 4px;
+        border-radius: 3px;
+    }
+    .calendarIcon{
+        position: absolute;
+        top: 270px;
+        left: 7px;
+    }
+    .clientIcon{
+        position: absolute;
+        top: 320px;
+        left: 7px;
+    }
+    .staffIcon{
+        position: absolute;
+        top: 370px;
+        left: 7px;
+    }
+    .serviceIcon{
+        position: absolute;
+        top: 420px;
+        left: 7px;
+    } 
+    .title{
+        margin-left: 45px;
+        font-size: 40px;
+    } 
+    .button1{
+        margin-left: 50px;
+        font-size: 18px;
+        margin-top: 0px;
+        float: left;
+    }
+}
+
+
+
