--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body{
 ul li label{
     display: none;
 }
+.container-fulid{
+    width: 120%;
+}
 .rowoverlay{
     position: absolute;
     top: 0;
@@ -56,20 +59,20 @@ ul li label{
 }
 .title{
     color: #193566;
-    padding-left: 8px;
+    margin-left: 8px;
     font-family: Poppins;
     font-style: normal;
-    font-size: 50px;
+    font-size: 40px;
     line-height: 75px;
 }
-.button1{
+.appointment{
     border: none;
     background: #193566;
     color: #ECF0F3;
     font-family: Poppins;
     font-style: normal;
     font-weight: bold;
-    font-size: 22px;
+    font-size: 15px;
     line-height: 33px;
     display: flex;
     align-items: center;
@@ -78,29 +81,102 @@ ul li label{
     border-radius: 100px;
     padding: 5px 30px;
     margin-top: 13px;
-    margin-right: 0px;
-    float: right;
+    margin-left: 10px;
 }
-.button2{
+.bellIcon{
     border: none;
-    
-
+    border-radius: 30px;
+    padding: 5px 6px;
+    margin-top: 19px;
+    margin-left: 90px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-.button3{
+.settingIcon{
     border: none;
-
+    border-radius: 30px;
+    padding: 5px 6px;
+    margin-top: 19px;
+    margin-left: 35px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.sales{
+    width: 230px;
+    height: 210px;
+    margin-left: 22px;
+    background: #ECF0F3;
+    box-shadow: -8px -8px 16px #FFFFFF, 10px 10px 20px rgba(151, 167, 195, 0.3);
+    border-radius: 20px;
+    border: 1px solid black;
+}
+.sales .totalsales{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 45px;
+    color: #193566;
+}
+.sales .amount{
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 64px;
+    color: #193566;
+}
+.lounge{
+    width: 480px;
+    height: 295px;
+    margin-left: 22px;
+    margin-top: 22px;
+    background: #ECF0F3;
+    box-shadow: -8px -8px 16px #FFFFFF, 10px 10px 20px rgba(151, 167, 195, 0.3);
+    border-radius: 20px;
+    border: 1px solid black;
+}
+.service-provider{
+    width: 200px;
+    height: 350px;
+    background: #ECF0F3;
+    box-shadow: -8px -8px 16px #FFFFFF, 10px 10px 20px rgba(151, 167, 195, 0.3);
+    border-radius: 20px;
+    border: 1px solid black;
+}
+.total-appointment{
+    width: 200px;
+    height: 155px;
+    margin-top: 22px;
+    background: #ECF0F3;
+    box-shadow: -8px -8px 16px #FFFFFF, 10px 10px 20px rgba(151, 167, 195, 0.3);
+    border-radius: 20px;
+    border: 1px solid black;
+}
+.upcoming-appointment{
+    width: 430px;
+    height: 300px;
+    background: #ECF0F3;
+    box-shadow: -8px -8px 16px #FFFFFF, 10px 10px 20px rgba(151, 167, 195, 0.3);
+    border-radius: 20px;
+    border: 1px solid black;
+}
+.popular-hour{
+    width: 430px;
+    height: 205px;
+    margin-top: 22px;
+    background: #ECF0F3;
+    box-shadow: -8px -8px 16px #FFFFFF, 10px 10px 20px rgba(151, 167, 195, 0.3);
+    border-radius: 20px;
+    border: 1px solid black;
 }
 
-
-  
 @media only screen and (max-width: 600px) {
     .rowoverlay{
         height: 100%;
     }
     .coloverlay{
         width: 17%;
+        height: 100%;
         border-radius: 10px;
-       
     }
     .listIcon{
         position: absolute;
@@ -137,13 +213,22 @@ ul li label{
     } 
     .title{
         margin-left: 45px;
-        font-size: 40px;
+        font-size: 35px;
     } 
-    .button1{
-        margin-left: 50px;
-        font-size: 18px;
+    .appointment{
+        margin-left: 40px;
         margin-top: 0px;
         float: left;
+        font-size: 18px;
+    }
+    .bellIcon{
+        margin-top: 5px;
+        margin-left: 15px;
+        float: left;
+    }
+    .settingIcon{
+        margin-top: 4px;
+        margin-left: 15px;
     }
 }
 
